--- a/templates/index.html
+++ b/templates/index.html
@@ -453,6 +453,13 @@
             overflow-wrap: break-word;  /* 新版标准 */
             white-space: normal;  /* 确保文本正常换行 */
         }
+
+        #div_tag img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
     </style>
 </head>
 <body>
