--- a/templates/index.html
+++ b/templates/index.html
@@ -454,7 +454,7 @@
             white-space: normal;  /* 确保文本正常换行 */
         }
 
-        #div_tag img {
+        #img {
             max-width: 100%;
             height: auto;
             display: block;
