--- a/templates/index.html
+++ b/templates/index.html
@@ -536,7 +536,7 @@
 
 
     <!-- 悬浮按钮控制控制面板 -->
-    <div id="floating_button"   class="floating_button_ball" style="font-size: 30px;">悬
+    <div id="floating_button"   class="floating_button_ball" style="font-size: 30px;">
     </div>  
 
     <script>
@@ -559,6 +559,7 @@
                 const scrollTop = window.scrollY;
                 const progress = (scrollTop / documentHeight) * 100;
                 progressBar.style.height = `${progress}%`;
+                floatingButton.textContent = `${Math.round(progress)}`;
             }
             
             // 监听滚动事件以更新进度条
